<resources>
    <string name="app_name">taximeter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="language_setting">Language Setting</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="arabic">Arabic</string>


    <string name="distance_display">%.2f km</string>
    <string name="time_display">%d min</string>
    <string name="fare_display">%.2f MAD</string>

    <string name="menu_maps">Maps</string>
    <string name="menu_meter">Meter</string>
    <string name="menu_settings">Settings</string>
    <string name="no_history_available">No history available</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>

    <string name="google_maps_key">AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="subtitle_text">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>

    <string name="distance_label">Distance</string>
    <string name="distance_value">0.00 km</string>
    <string name="time_label">Time</string>
    <string name="time_value">0 min</string>
    <string name="fare_label">Fare</string>
    <string name="fare_value">0.00 MAD</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>


    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="save_profile_button">Save Profile</string>

    <string name="nav_header_desc">Profile Image</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">Your Subtitle</string>


</resources>