<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Profile Item -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <!-- Other Menu Items -->
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_maps" />

        <item
            android:id="@+id/nav_meter"
            android:icon="@drawable/ic_meter"
            android:title="@string/menu_meter" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings" />
    </group>
</menu>
