<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/color1"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:background="@color/color3"
        app:shapeAppearance="@style/ShapeAppearance.Circular"
        app:strokeColor="@color/color2"
        app:strokeWidth="2dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <!-- Title -->
    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/nav_header_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/color2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:maxLines="1"
        android:ellipsize="end" />

</LinearLayout>
